<resources>
    <string name="app_name">Advokata</string>
    <string name="title_home">Home</string>
    <string name="title_lawyer">Find Lawyer</string>
    <string name="title_chatbot">ChatBot</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_profile">Profile</string>
    <string name="login_with_google">Login With Google</string>
    <string name="background_image">Background Image</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="user_name">Name</string>
    <string name="title_welcome_page">Advokata - Mitra Hukum Anda</string>
    <string name="message_welcome_page">Solusi terbaik untuk mendukung kebutuhan hukum Anda. Bersama kami, wujudkan pelayanan yang cepat, transparan, dan terpercaya</string>
    <string name="get_started_button">Get Started</string>
    <string name="flowat">Floating Button</string>
    <string name="description_story">This is a description of the story</string>
    <string name="story_image">image\n</string>
    <string name="username">Username</string>
    <string name="upload">Upload\n</string>
    <string name="gallery">Gallery\n</string>
    <string name="camera">Camera\n\n</string>
    <string name="description">Describe your story heree</string>
    <string name="logout">logout\n</string>
    <string name="noData">No Data</string>


    <string name="uu_kuhp">UU KUHP</string>
    <string name="uud_1945">UUD 1945</string>

    <string name="lawyer_list_title">Lawyer List</string>
    <string name="news_list_title">Berita Terbaru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="nama_user">Nama User</string>
    <string name="emailuser_gmail_com">emailuser@gmail.com</string>
    <string name="kota_asal_user">Kota asal user</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="advokata_about_us">Legal Consultation Platform with Chatbot Features and Lawyer Finder.</string>
    <string name="about_us">Tentang Kami</string>
    <string name="back_button">Back</string>
    <string name="logout_button">LOGOUT</string>
    <string name="save">SAVE</string>
    <string name="asal_kota">Asal kota</string>
    <string name="consult">Consult</string>
    <string name="price">Rp. 100.000</string>
    <string name="lawyer_name">lawyer name</string>
    <string name="nama_berita">Nama Berita</string>
    <string name="deskripsi_berita">Deskripsi Berita</string>
    <string name="tulis_pesan">Tulis pesan...</string>
    <string name="kirim">Kirim</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="welcome_to_advokata">Welcome to Advokata</string>
    <string name="ingin_mencari_lawyer_untuk_menangani_kasusmu_nklik_tombol_cari_di_bawah">Ingin Mencari Lawyer Untuk Menangani Kasusmu?\nKlik Tombol Cari di Bawah!</string>
    <string name="cari_pengacara">Cari Pengacara</string>
    <string name="kategori_hukum">Kategori Hukum</string>
    <string name="perda">Perda</string>
    <string name="perpu">Perpu</string>
    <string name="name_lawyer">Name Lawyer</string>

</resources>