<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Lawyer Logo -->
        <ImageView
            android:id="@+id/img_event_logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/lawyer_name"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_event_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Lawyer Name -->
        <TextView
            android:id="@+id/tv_event_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="Name Lawyer"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_harga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_event_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <!-- Harga -->
        <TextView
            android:id="@+id/tv_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/price"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/blue_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_event_logo"
            app:layout_constraintTop_toBottomOf="@id/tv_event_name"
            app:layout_constraintVertical_bias="0.2" />

        <!-- Consult Now Button -->
        <Button
            android:id="@+id/btn_consult_now"
            android:layout_width="92dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/blue_200"
            android:text="@string/consult"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_harga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/tv_harga"
            app:layout_constraintTop_toTopOf="@id/tv_harga"
            tools:ignore="SmallSp,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
